# OpenGL

./: .gitignore  CMakeLists.txt  glad.c
OpenGL_Test/: OpenGL_Test.sln
OpenGL_Test/OpenGL_Test/: OpenGL_Test.vcxproj  OpenGL_Test.vcxproj.filters  main.cpp
OpenGL_Test/OpenGL_Test/x64/Debug/: OpenGL_Test.exe.recipe  OpenGL_Test.ilk  vc143.idb
OpenGL_Test/OpenGL_Test/x64/Debug/OpenGL_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: EBO.h  VAO.h  VBO.h  camera.h  errors.h  shaderClass.h  texture.h
include/glad/: glad.h
libraries/lib/: glfw3.lib
resources/shaders/: default.frag  default.vert
shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  main.cpp  shaderClass.cpp  texture.cpp
